# atom-extension

./: .gitignore  DESCRIPTION_EN.md  DESCRIPTION_VI.md  MicroClosureRenderer.js  PRIVACY.md  README.md  RELEASE_NOTES.md  TEST_WAVE2_CHECKLIST.md  ai_pilot_service.js  ai_service.js  amolofi_webhook_secret_2026.txt  background.js  bug_report.html  bug_report.js  build_cws.ps1  content.js  debug.css  debug.html  debug.js  fix_encoding.ps1  i18n_bridge.js  index.html  intervention_manager.js  journal.html  journal.js  manifest.json  memory.html  memory.js  offscreen_anchor.html  offscreen_anchor.js  options.html  options.js  options_snippet.html  popup.css  popup.html  popup.js  popup_minimal.js  post_focus_observer.js  rate-limit-implementation.md  selection_logic.js  (+14 more)
amo-stories-engine/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  test_output.txt  test_sf_result.txt  test_sf_result2.txt  test_soul_forge_flow.py  vercel.json
amo-stories-engine/api/: index.py
amo-stories-engine/app/: __init__.py  config.py  main.py
amo-stories-engine/tests/: conftest.py  test_archon_fragment.py  test_combat.py  test_combat_engine_v2.py  test_combat_v2.py  test_consequence_router.py  test_crng.py  test_emissary.py  test_encoding.py  test_fate_buffer.py  test_growth_narrative.py  test_identity.py  test_identity_mutation.py  test_migration.py  test_models.py  test_monster_core.py  test_mutation_lock.py  test_narrative_mapping.py  test_phase2_domain_forge.py  test_phase2a.py  test_phase2b.py  test_phase2c.py  test_phase3.py  test_pipeline_models.py  (+28 more)
(+750 files in other folders)
